# kaissa-bot

./: .gitignore  README.md  config.yaml  kaissa-bot.cabal  stack.yaml
app/: Main.hs
src/Kaissa/: Bot.hs
src/Kaissa/Bot/: API.hs  Config.hs  Monad.hs  Server.hs  Telegram.hs
