name:                kaissa-bot
version:             0.1.0.0
synopsis:
description:
homepage:            https://github.com/teaspot-studio/kaissa-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2017 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Kaissa.Bot
    Kaissa.Bot.API
    Kaissa.Bot.Config
    Kaissa.Bot.Monad
    Kaissa.Bot.Server
  default-language:    Haskell2010
  build-depends:
      base                >= 4.7     && < 5
    , bytestring          >= 0.10    && < 0.11
    , http-client         >= 0.5     && < 0.6
    , http-client-tls     >= 0.3     && < 0.4
    , lens                >= 4.15    && < 4.16
    , monad-control       >= 1.0     && < 1.1
    , monad-logger        >= 0.3     && < 0.4
    , mtl                 >= 2.2     && < 2.3
    , servant             >= 0.9     && < 0.10
    , servant-client      >= 0.9     && < 0.10
    , servant-server      >= 0.9     && < 0.10
    , telegram-api        >= 0.6     && < 0.7
    , text                >= 1.2     && < 1.3
    , transformers-base   >= 0.4     && < 0.5
    , yaml                >= 0.8     && < 0.9
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators

executable kaissa-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base             >= 4.7      && < 5
    , kaissa-bot
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
